--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "msw": "0.28.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-loader-spinner": "4.0.0"
+    "react-loader-spinner": "4.0.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "10.1.0",
+    "eslint": "9.0.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "prettier": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
